[project]
authors = [{name = "Geoff Hutchison", email = "geoff.hutchison@gmail.com"}]
dependencies = [
  "torch>=2.0",
  "torchani>=2.2",
  "numpy>=1.20",
  "setuptools",
]
license = "BSD-3-Clause"
name = "avogadro-ani-energy"
requires-python = ">=3.11,<3.13"
version = "0.1.0"
description = "ANI-1x and ANI-2x energies and gradients"

[project.scripts]
avogadro-ani-energy = "avogadro_ani_energy:main"
avogadro-ani-energy-setup = "avogadro_ani_energy:setup"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/avogadro_ani_energy"]

[tool.avogadro]
minimum-avogadro-version = "1.103"

[[tool.avogadro.energy-models]]
identifier = "ANI1x"
model-name = "ANI1x"
description = "Calculate ANI-1x energies and gradients"
input-format = "cjson"
protocol = "binary-v1"
support.gradients = true
support.elements = "1,6,7,8"
support.unit-cell = false
support.ions = false
support.radicals = false

[[tool.avogadro.energy-models]]
identifier = "ANI2x"
model-name = "ANI2x"
description = "Calculate ANI-2x energies and gradients"
input-format = "cjson"
protocol = "binary-v1"
support.gradients = true
support.elements = "1,6-9,16-17"
support.unit-cell = false
support.ions = false
support.radicals = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "linux-aarch64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
avogadro_ani_energy = { path = ".", editable = true }

[tool.pixi.tasks]
setup = "avogadro-ani-energy-setup"

[tool.pixi.dependencies]
python = ">=3.11,<3.13"
